Update generated content

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Gen Z Hong Kong từ bỏ công việc toàn thời gian",
+    "content": "Thế hệ Gen Z ở Hong Kong đang từ bỏ công việc toàn thời gian để chuyển sang làm việc bán thời gian nhằm tìm kiếm sự tự do và tránh cảm giác nhàm chán. Nhiều người trẻ như Alex Wong cho rằng họ muốn sống cho chính mình và dành thời gian cho gia đình thay vì cống hiến cho công ty như bố mẹ họ. Một khảo sát cho thấy 36% người trẻ không có kế hoạch tìm việc làm, cho thấy xu hướng này đang ngày càng phổ biến và ảnh hưởng đến lực lượng lao động tại Hong Kong.",
+    "link": "https://vnexpress.net/gen-z-hong-kong-tu-bo-cong-viec-toan-thoi-gian-4859105.html",
+    "cat": "thoi-su",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Tại sao Gen Z ở Hong Kong từ bỏ công việc toàn thời gian?",
+    "answers": [
+      {
+        "text": "Họ muốn tự do và tránh nhàm chán.",
+        "correct": true
+      },
+      {
+        "text": "Họ không có khả năng làm việc.",
+        "correct": false
+      },
+      {
+        "text": "Họ muốn kiếm tiền nhiều hơn.",
+        "correct": false
+      },
+      {
+        "text": "Họ yêu thích công việc cố định.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Ngân hàng Nhà nước khu vực 9 đặt ở Đà Nẵng, 5 giám đốc tỉnh làm phó giám đốc, lãnh đạo giảm một nửa",
     "content": "Ngân hàng Nhà nước Việt Nam đã công bố quyết định thành lập Ngân hàng Nhà nước khu vực 9 tại Đà Nẵng. Ông Lê Anh Xuân được bổ nhiệm làm giám đốc, cùng với 5 giám đốc tỉnh miền Trung được điều động giữ chức phó giám đốc. Sau khi sắp xếp, số lượng công chức của khu vực giảm từ 226 xuống còn 203, trong đó số lãnh đạo giảm từ 63 xuống còn 29. Cơ cấu tổ chức hiện tại còn 5 phòng làm việc.",
     "link": "https://tuoitre.vn/ngan-hang-nha-nuoc-khu-vuc-9-dat-o-da-nang-5-giam-doc-tinh-lam-pho-giam-doc-lanh-dao-giam-mot-nua-20250312111344998.htm",
@@ -174,6 +201,64 @@
     ]
   },
   {
+    "title": "Cựu Tổng thống Philippines Duterte lên tiếng sau lệnh bắt giữ của ICC",
+    "content": "Cựu Tổng thống Philippines Rodrigo Duterte đã lên tiếng về lệnh bắt giữ của Tòa Hình sự Quốc tế (ICC) sau khi ông bị bắt tại sân bay quốc tế Manila. Trong một video, ông đặt câu hỏi về lý do và cơ sở pháp lý cho việc bắt giữ mình, đồng thời khẳng định rằng vụ bắt giữ là bất hợp pháp. Ông cũng chỉ trích chính quyền hiện tại vì đã hợp tác với ICC, mặc dù Philippines đã rút khỏi tổ chức này vào năm 2019.",
+    "link": "https://dantri.com.vn/the-gioi/cuu-tong-thong-philippines-duterte-len-tieng-sau-lenh-bat-giu-cua-icc-20250312103407005.htm",
+    "cat": "phap-luat",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Cựu Tổng thống Duterte đã nói gì về lệnh bắt giữ của ICC?",
+    "answers": [
+      {
+        "text": "Ông cho rằng vụ bắt giữ là bất hợp pháp.",
+        "correct": true
+      },
+      {
+        "text": "Ông đã đồng ý hợp tác với ICC.",
+        "correct": false
+      },
+      {
+        "text": "Ông đã xin lỗi về các chính sách của mình.",
+        "correct": false
+      },
+      {
+        "text": "Ông không quan tâm đến việc bị bắt giữ.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Lễ hội âm nhạc Road to 8Wonder sắp diễn ra tại Vinhomes Royal Island",
+    "content": "Lễ hội âm nhạc quốc tế Road to 8Wonder sẽ diễn ra vào ngày 15/3 tại Vinhomes Royal Island, Hải Phòng, với sự tham gia của nhiều nghệ sĩ nổi tiếng như B.I và các nghệ sĩ Việt Nam. Sự kiện hứa hẹn mang lại không khí sôi động và nâng tầm phong cách sống cho cư dân nơi đây, đồng thời thúc đẩy ngành du lịch và giải trí của thành phố. Đây là một phần trong chiến lược phát triển của Vinhomes nhằm biến Hải Phòng thành điểm đến giải trí hàng đầu miền Bắc.",
+    "link": "https://dantri.com.vn/giai-tri/le-hoi-am-nhac-road-to-8wonder-sap-dien-ra-tai-vinhomes-royal-island-20250312104717952.htm",
+    "cat": "giai-tri",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Lễ hội âm nhạc Road to 8Wonder diễn ra vào ngày nào?",
+    "answers": [
+      {
+        "text": "15/3",
+        "correct": true
+      },
+      {
+        "text": "20/3",
+        "correct": false
+      },
+      {
+        "text": "10/3",
+        "correct": false
+      },
+      {
+        "text": "12/3",
+        "correct": false
+      },
+      {
+        "text": "18/3",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Bị ung thư hạch bạch huyết kiêng ăn gì?",
     "content": "Bài viết đề cập đến chế độ ăn uống cần kiêng khem cho người mắc ung thư hạch bạch huyết. Người bệnh nên hạn chế chất béo động vật, thực phẩm chế biến sẵn, bánh ngọt và đồ uống có cồn để tránh làm tăng tác dụng phụ trong quá trình điều trị. Dinh dưỡng hợp lý đóng vai trò quan trọng trong việc nâng cao sức khỏe và hỗ trợ hiệu quả điều trị ung thư.",
     "link": "https://vnexpress.net/bi-ung-thu-hach-bach-huyet-kieng-an-gi-4860185.html",
@@ -200,6 +285,33 @@
       },
       {
         "text": "Tránh ăn rau xanh và trái cây",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Thái Lan dự kiến áp loạt ưu đãi cho xe plug-in hybrid",
+    "content": "Bộ Tài chính Thái Lan dự kiến sẽ áp dụng loạt ưu đãi cho xe plug-in hybrid (PHEV) từ ngày 1/1/2026, bao gồm việc tách biệt thuế tiêu thụ đặc biệt cho PHEV và xe thuần điện. Mức thuế cho PHEV sẽ phụ thuộc vào quãng đường có thể đi sau mỗi lần sạc, với mức thuế 5% cho xe di chuyển trên 80 km và 10% cho xe dưới 80 km. Các ưu đãi này nhằm hỗ trợ ngành sản xuất ôtô Thái Lan trong quá trình chuyển đổi sang xe điện, với mục tiêu sản xuất 100.000 xe điện trong nước vào năm 2026.",
+    "link": "https://vnexpress.net/thai-lan-du-kien-ap-loat-uu-dai-cho-xe-plug-in-hybrid-4860127.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Thái Lan sẽ áp dụng ưu đãi cho loại xe nào từ năm 2026?",
+    "answers": [
+      {
+        "text": "Xe plug-in hybrid (PHEV)",
+        "correct": true
+      },
+      {
+        "text": "Xe chạy bằng động cơ đốt trong",
+        "correct": false
+      },
+      {
+        "text": "Xe thuần điện",
+        "correct": false
+      },
+      {
+        "text": "Xe hybrid thông thường",
         "correct": false
       }
     ]
@@ -2593,33 +2705,6 @@
     ]
   },
   {
-    "title": "Capello: 'Guardiola mất nhiều Champions League vì kiêu ngạo'",
-    "content": "Cựu HLV Fabio Capello cho rằng Pep Guardiola đã mất nhiều cơ hội giành Champions League do sự kiêu ngạo của mình. Theo ông, Guardiola thường thay đổi chiến thuật một cách kỳ lạ trong các trận đấu quyết định, khiến ông không tập trung vào sức mạnh của cầu thủ. Capello cũng nhấn mạnh rằng ảnh hưởng của Guardiola đã khiến bóng đá Italy bị ảnh hưởng xấu, khi nhiều người cố gắng sao chép phong cách của ông mà không có đủ khả năng tương tự.",
-    "link": "https://vnexpress.net/capello-guardiola-mat-nhieu-champions-league-vi-kieu-ngao-4860006.html",
-    "cat": "the-thao",
-    "positivity": 5,
-    "importance": 7,
-    "question": "Tại sao Capello cho rằng Guardiola mất nhiều Champions League?",
-    "answers": [
-      {
-        "text": "Vì sự kiêu ngạo và thay đổi chiến thuật kỳ lạ.",
-        "correct": true
-      },
-      {
-        "text": "Vì không có đủ cầu thủ giỏi.",
-        "correct": false
-      },
-      {
-        "text": "Vì không đủ may mắn trong các trận đấu.",
-        "correct": false
-      },
-      {
-        "text": "Vì không chú trọng vào phòng ngự.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Ai dễ bị ngưng thở khi ngủ?",
     "content": "Hội chứng ngưng thở khi ngủ không chỉ xảy ra ở người lớn mà còn có thể ảnh hưởng đến trẻ em. Nhiều người có suy nghĩ sai lầm rằng trẻ em không mắc phải tình trạng này. Bài viết chỉ ra rằng có nhiều yếu tố làm tăng nguy cơ mắc hội chứng ngưng thở khi ngủ ở trẻ em, do đó cần chú ý và phát hiện sớm để điều trị kịp thời.",
     "link": "https://vnexpress.net/ai-de-bi-ngung-tho-khi-ngu-4859945.html",
@@ -2646,6 +2731,33 @@
       },
       {
         "text": "Người có bệnh tim mạch",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Capello: 'Guardiola mất nhiều Champions League vì kiêu ngạo'",
+    "content": "Cựu HLV Fabio Capello cho rằng Pep Guardiola đã mất nhiều cơ hội giành Champions League do sự kiêu ngạo của mình. Theo ông, Guardiola thường thay đổi chiến thuật một cách kỳ lạ trong các trận đấu quyết định, khiến ông không tập trung vào sức mạnh của cầu thủ. Capello cũng nhấn mạnh rằng ảnh hưởng của Guardiola đã khiến bóng đá Italy bị ảnh hưởng xấu, khi nhiều người cố gắng sao chép phong cách của ông mà không có đủ khả năng tương tự.",
+    "link": "https://vnexpress.net/capello-guardiola-mat-nhieu-champions-league-vi-kieu-ngao-4860006.html",
+    "cat": "the-thao",
+    "positivity": 5,
+    "importance": 7,
+    "question": "Tại sao Capello cho rằng Guardiola mất nhiều Champions League?",
+    "answers": [
+      {
+        "text": "Vì sự kiêu ngạo và thay đổi chiến thuật kỳ lạ.",
+        "correct": true
+      },
+      {
+        "text": "Vì không có đủ cầu thủ giỏi.",
+        "correct": false
+      },
+      {
+        "text": "Vì không đủ may mắn trong các trận đấu.",
+        "correct": false
+      },
+      {
+        "text": "Vì không chú trọng vào phòng ngự.",
         "correct": false
       }
     ]
@@ -3544,33 +3656,6 @@
     ]
   },
   {
-    "title": "Chuyên gia: 'Tiêm gộp nhiều vaccine tạo hiệu quả miễn dịch sớm'",
-    "content": "Theo TS.BS Nguyễn An Nghĩa, việc tiêm gộp nhiều vaccine cho trẻ có thể tạo ra hiệu quả miễn dịch tốt mà không làm quá tải hệ miễn dịch. Mặc dù có một số lo ngại từ phụ huynh về an toàn, nhưng các nghiên cứu cho thấy việc tiêm vaccine cùng lúc không chỉ tiết kiệm thời gian và chi phí cho phụ huynh mà còn giúp hệ miễn dịch trẻ hình thành nhiều kháng thể bảo vệ. Tuy nhiên, cần phải tuân thủ các quy định và khám sàng lọc trước khi tiêm để đảm bảo an toàn cho trẻ.",
-    "link": "https://vnexpress.net/chuyen-gia-tiem-gop-nhieu-vaccine-tao-hieu-qua-mien-dich-som-4859682.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Việc tiêm gộp nhiều vaccine cho trẻ có lợi gì?",
-    "answers": [
-      {
-        "text": "Tạo hiệu quả miễn dịch tốt hơn",
-        "correct": true
-      },
-      {
-        "text": "Giảm chi phí và thời gian tiêm",
-        "correct": false
-      },
-      {
-        "text": "Tăng nguy cơ phản ứng phụ",
-        "correct": false
-      },
-      {
-        "text": "Không cần tiêm vaccine nữa",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Lợi ích khi ăn dâu tây thường xuyên",
     "content": "Dâu tây là một loại trái cây ít calo và giàu chất xơ, giúp gia tăng cảm giác no và hỗ trợ quá trình giảm cân. Chúng cũng chứa nhiều nước, vitamin C và chất chống oxy hóa, giúp tăng cường hệ miễn dịch và bảo vệ tế bào khỏi tổn thương. Ngoài ra, dâu tây có chỉ số đường huyết thấp, giúp điều chỉnh lượng đường trong máu và giảm cảm giác thèm ăn. Việc bổ sung dâu tây vào chế độ ăn uống hàng ngày mang lại nhiều lợi ích cho sức khỏe tổng thể.",
     "link": "https://vnexpress.net/loi-ich-khi-an-dau-tay-thuong-xuyen-4859532.html",
@@ -3593,6 +3678,33 @@
       },
       {
         "text": "Làm yếu hệ miễn dịch.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Chuyên gia: 'Tiêm gộp nhiều vaccine tạo hiệu quả miễn dịch sớm'",
+    "content": "Theo TS.BS Nguyễn An Nghĩa, việc tiêm gộp nhiều vaccine cho trẻ có thể tạo ra hiệu quả miễn dịch tốt mà không làm quá tải hệ miễn dịch. Mặc dù có một số lo ngại từ phụ huynh về an toàn, nhưng các nghiên cứu cho thấy việc tiêm vaccine cùng lúc không chỉ tiết kiệm thời gian và chi phí cho phụ huynh mà còn giúp hệ miễn dịch trẻ hình thành nhiều kháng thể bảo vệ. Tuy nhiên, cần phải tuân thủ các quy định và khám sàng lọc trước khi tiêm để đảm bảo an toàn cho trẻ.",
+    "link": "https://vnexpress.net/chuyen-gia-tiem-gop-nhieu-vaccine-tao-hieu-qua-mien-dich-som-4859682.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Việc tiêm gộp nhiều vaccine cho trẻ có lợi gì?",
+    "answers": [
+      {
+        "text": "Tạo hiệu quả miễn dịch tốt hơn",
+        "correct": true
+      },
+      {
+        "text": "Giảm chi phí và thời gian tiêm",
+        "correct": false
+      },
+      {
+        "text": "Tăng nguy cơ phản ứng phụ",
+        "correct": false
+      },
+      {
+        "text": "Không cần tiêm vaccine nữa",
         "correct": false
       }
     ]
@@ -4370,87 +4482,6 @@
       },
       {
         "text": "Vì vi phạm bản quyền âm nhạc",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Bình minh trên làng chài Thượng Luật",
-    "content": "Bài viết mô tả khung cảnh bình minh tại làng chài Thượng Luật, xã Ngư Thủy, huyện Lệ Thủy, Quảng Bình. Tác giả ghi lại cảnh người dân, đặc biệt là phụ nữ, chờ đợi thuyền đánh cá trở về sau một đêm làm việc vất vả. Không khí nhộn nhịp và vui tươi khi những mẻ cá đầy ắp được đưa lên bờ, thể hiện sự đoàn tụ và niềm vui của cư dân làng chài.",
-    "link": "https://tuoitre.vn/binh-minh-tren-lang-chai-thuong-luat-20250305100939784.htm",
-    "cat": "gia-dinh",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Bình minh trên làng chài Thượng Luật mang đến cảm xúc gì cho người dân?",
-    "answers": [
-      {
-        "text": "Niềm vui và hạnh phúc khi đoàn tụ",
-        "correct": true
-      },
-      {
-        "text": "Nỗi buồn vì công việc vất vả",
-        "correct": false
-      },
-      {
-        "text": "Cảm giác chờ đợi mệt mỏi",
-        "correct": false
-      },
-      {
-        "text": "Tham gia vào lễ hội truyền thống",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Nga đáp trả khi Đan Mạch tuyên bố sẵn sàng đưa quân tới Ukraine",
-    "content": "Nga đã phản hồi sau khi Đan Mạch tuyên bố sẵn sàng gửi quân đến Ukraine nếu có sự triển khai lực lượng gìn giữ hòa bình của châu Âu. Người phát ngôn Bộ Ngoại giao Nga, Maria Zakharova, đã đặt câu hỏi về việc ai sẽ bảo vệ Greenland của Đan Mạch trong tình huống này. Đan Mạch nhấn mạnh rằng đây chỉ là một tuyên bố về sự chuẩn bị và không có kế hoạch triển khai cụ thể nào hiện tại.",
-    "link": "https://dantri.com.vn/the-gioi/nga-dap-tra-khi-dan-mach-tuyen-bo-san-sang-dua-quan-toi-ukraine-20250311091953467.htm",
-    "cat": "the-gioi",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Nga đã đáp trả như thế nào trước tuyên bố của Đan Mạch về việc gửi quân tới Ukraine?",
-    "answers": [
-      {
-        "text": "Nga đặt câu hỏi về việc ai sẽ bảo vệ Greenland của Đan Mạch.",
-        "correct": true
-      },
-      {
-        "text": "Nga không bày tỏ ý kiến gì về vấn đề này.",
-        "correct": false
-      },
-      {
-        "text": "Nga ủng hộ việc Đan Mạch gửi quân đến Ukraine.",
-        "correct": false
-      },
-      {
-        "text": "Nga đã yêu cầu Đan Mạch không can thiệp vào Ukraine.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Đẹp ngỡ ngàng rừng Măng Đen mùa thay lá",
-    "content": "Mùa thay lá tại rừng Măng Đen, huyện Kon Plông, Kon Tum mang đến vẻ đẹp kỳ diệu với những cành lá non nhiều màu sắc như xanh nhạt, vàng nhạt và tím sẫm. Rừng tự nhiên nơi đây rộng khoảng 100.000ha và được bảo vệ tốt, góp phần tạo nên khí hậu mát mẻ cho thị trấn Măng Đen, một điểm đến du lịch hấp dẫn. Tỉ lệ che phủ rừng tại huyện Kon Plông hiện đã đạt gần 83%, tạo nên cảnh quan thiên nhiên tươi đẹp, thu hút nhiều du khách.",
-    "link": "https://tuoitre.vn/dep-ngo-ngang-rung-mang-den-mua-thay-la-2025031109145714.htm",
-    "cat": "du-lich",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Rừng Măng Đen mùa thay lá có đặc điểm gì nổi bật?",
-    "answers": [
-      {
-        "text": "Cảnh rừng đẹp với lá non nhiều màu sắc",
-        "correct": true
-      },
-      {
-        "text": "Rừng Măng Đen không có rừng tự nhiên",
-        "correct": false
-      },
-      {
-        "text": "Mùa thay lá không ảnh hưởng đến khí hậu",
-        "correct": false
-      },
-      {
-        "text": "Rừng Măng Đen chỉ có một màu xanh duy nhất",
         "correct": false
       }
     ]
