Update generated content

--- a/home.html
+++ b/home.html
@@ -148,6 +148,64 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Nữ runner phủ nhận dùng gậy tiếp sức đánh đối thủ",
+    "content": "Nữ runner Alaila Everett phủ nhận rằng cô đã cố ý đánh đối thủ Kaelen Tucker bằng gậy tiếp sức trong một cuộc thi tại Virginia. Everett cho biết cô chỉ bị mất thăng bằng và vô tình vung gậy trúng đầu Tucker. Tuy nhiên, video ghi lại sự việc cho thấy động thái của cô có vẻ như có chủ ý, dẫn đến những chỉ trích và lời đe dọa từ dư luận. Everett đã khóc khi lên tiếng về vụ việc và cho biết cô đã cố gắng liên lạc với Tucker nhưng bị chặn.",
+    "link": "https://vnexpress.net/nu-runner-phu-nhan-dung-gay-tiep-suc-danh-doi-thu-4860232.html",
+    "cat": "the-thao",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Alaila Everett có khẳng định điều gì về hành động của mình trong sự việc với Kaelen Tucker?",
+    "answers": [
+      {
+        "text": "Cô ấy phủ nhận cố ý đánh đối thủ.",
+        "correct": true
+      },
+      {
+        "text": "Cô ấy thừa nhận đã cố ý đánh đối thủ.",
+        "correct": false
+      },
+      {
+        "text": "Cô ấy không biết gì về sự việc.",
+        "correct": false
+      },
+      {
+        "text": "Cô ấy đã xin lỗi Tucker ngay lập tức.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Quảng Ninh: chưa cấp phép dịch vụ ăn uống trong hang động",
+    "content": "Sở Văn hóa, Thể thao và Du lịch tỉnh Quảng Ninh đã thông báo rằng chưa có đơn vị nào được cấp phép để tổ chức các dịch vụ ăn uống và biểu diễn nghệ thuật trong hang động tại Cẩm Phả. Mặc dù Công ty APC Corporation đã thông báo về kế hoạch tổ chức trải nghiệm ẩm thực trong hang Dơi, chính quyền địa phương khẳng định chưa nhận được hồ sơ chính thức nào. Việc phát triển các sản phẩm du lịch trong khu vực này vẫn đang trong giai đoạn đề xuất và cần được xem xét kỹ lưỡng theo quy định hiện hành.",
+    "link": "https://tuoitre.vn/quang-ninh-chua-cap-phep-dich-vu-an-uong-trong-hang-dong-20250312112026028.htm",
+    "cat": "du-lich",
+    "positivity": 5,
+    "importance": 7,
+    "question": "Có dịch vụ ăn uống nào được cấp phép trong hang động tại Quảng Ninh không?",
+    "answers": [
+      {
+        "text": "Không, chưa có dịch vụ nào được cấp phép.",
+        "correct": true
+      },
+      {
+        "text": "Có, dịch vụ đã được cấp phép.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ có dịch vụ biểu diễn nghệ thuật được cấp phép.",
+        "correct": false
+      },
+      {
+        "text": "Có dịch vụ ăn uống chỉ dành cho khách du lịch quốc tế.",
+        "correct": false
+      },
+      {
+        "text": "Chưa có thông tin rõ ràng về điều này.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Gen Z Hong Kong từ bỏ công việc toàn thời gian",
     "content": "Thế hệ Gen Z ở Hong Kong đang từ bỏ công việc toàn thời gian để chuyển sang làm việc bán thời gian nhằm tìm kiếm sự tự do và tránh cảm giác nhàm chán. Nhiều người trẻ như Alex Wong cho rằng họ muốn sống cho chính mình và dành thời gian cho gia đình thay vì cống hiến cho công ty như bố mẹ họ. Một khảo sát cho thấy 36% người trẻ không có kế hoạch tìm việc làm, cho thấy xu hướng này đang ngày càng phổ biến và ảnh hưởng đến lực lượng lao động tại Hong Kong.",
     "link": "https://vnexpress.net/gen-z-hong-kong-tu-bo-cong-viec-toan-thoi-gian-4859105.html",
@@ -554,33 +612,6 @@
     ]
   },
   {
-    "title": "Béo phì, bệnh chồng bệnh",
-    "content": "Bà Thảo, 51 tuổi, đã sống với tình trạng béo phì, tiểu đường và tăng huyết áp trong hơn 10 năm mà không được điều trị thích hợp. Sau khi được điều trị tại Bệnh viện Đa khoa Tâm Anh Hà Nội, bà đã giảm 11 kg và cải thiện tình trạng sức khỏe, như giảm đau lưng và kiểm soát huyết áp tốt hơn. Các bác sĩ khuyến nghị rằng người bệnh cần điều trị toàn diện và tầm soát các bệnh lý liên quan để tránh các biến chứng nghiêm trọng do béo phì.",
-    "link": "https://vnexpress.net/beo-phi-benh-chong-benh-4860204.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Béo phì có ảnh hưởng gì đến sức khỏe của bà Thảo?",
-    "answers": [
-      {
-        "text": "Gây ra nhiều biến chứng nghiêm trọng như tiểu đường và tăng huyết áp.",
-        "correct": true
-      },
-      {
-        "text": "Không ảnh hưởng gì đến sức khỏe.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ làm tăng cân mà không gây bệnh.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ làm đau lưng mà thôi.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Biến chứng nguy hiểm của viêm gan E",
     "content": "Viêm gan E do virus viêm gan E (HEV) gây ra và thường tự khỏi trong vài tuần. Tuy nhiên, một số trường hợp có thể dẫn đến các biến chứng nghiêm trọng như suy gan cấp, biến chứng thần kinh, hoặc hội chứng gan thận, đặc biệt ở phụ nữ mang thai và những người có hệ miễn dịch yếu. Viêm gan E cũng có thể lây truyền từ mẹ sang con với tỷ lệ bệnh cao trong giai đoạn chu sinh. Bác sĩ khuyến cáo người bệnh cần theo dõi và điều trị kịp thời để tránh những biến chứng nặng nề.",
     "link": "https://vnexpress.net/bien-chung-nguy-hiem-cua-viem-gan-e-4860177.html",
@@ -634,6 +665,33 @@
       },
       {
         "text": "Sốt xuất huyết",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Béo phì, bệnh chồng bệnh",
+    "content": "Bà Thảo, 51 tuổi, đã sống với tình trạng béo phì, tiểu đường và tăng huyết áp trong hơn 10 năm mà không được điều trị thích hợp. Sau khi được điều trị tại Bệnh viện Đa khoa Tâm Anh Hà Nội, bà đã giảm 11 kg và cải thiện tình trạng sức khỏe, như giảm đau lưng và kiểm soát huyết áp tốt hơn. Các bác sĩ khuyến nghị rằng người bệnh cần điều trị toàn diện và tầm soát các bệnh lý liên quan để tránh các biến chứng nghiêm trọng do béo phì.",
+    "link": "https://vnexpress.net/beo-phi-benh-chong-benh-4860204.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Béo phì có ảnh hưởng gì đến sức khỏe của bà Thảo?",
+    "answers": [
+      {
+        "text": "Gây ra nhiều biến chứng nghiêm trọng như tiểu đường và tăng huyết áp.",
+        "correct": true
+      },
+      {
+        "text": "Không ảnh hưởng gì đến sức khỏe.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ làm tăng cân mà không gây bệnh.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ làm đau lưng mà thôi.",
         "correct": false
       }
     ]
@@ -1311,37 +1369,6 @@
     ]
   },
   {
-    "title": "Sụt 14 kg trong 6 tháng do bệnh lupus ban đỏ",
-    "content": "Bà Hòa, 66 tuổi, đã sụt 14 kg trong 6 tháng do mắc bệnh lupus ban đỏ, một bệnh tự miễn mạn tính. Sau khi nhập viện trong tình trạng suy kiệt và nhiễm trùng nặng, các bác sĩ đã xác định được nguyên nhân và tiến hành điều trị tích cực. Bệnh lupus ban đỏ thường biểu hiện với các triệu chứng như đau nhức, rụng tóc và dễ nhầm lẫn với các bệnh khác. Nếu không được điều trị kịp thời, bệnh có thể dẫn đến những biến chứng nghiêm trọng.",
-    "link": "https://vnexpress.net/sut-14-kg-trong-6-thang-do-benh-lupus-ban-do-4860083.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Bà Hòa đã sụt bao nhiêu kg trong 6 tháng do bệnh lupus ban đỏ?",
-    "answers": [
-      {
-        "text": "14 kg",
-        "correct": true
-      },
-      {
-        "text": "10 kg",
-        "correct": false
-      },
-      {
-        "text": "20 kg",
-        "correct": false
-      },
-      {
-        "text": "5 kg",
-        "correct": false
-      },
-      {
-        "text": "8 kg",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Sun World và Vietravel hợp tác chiến lược",
     "content": "Công ty Sun World và Vietravel đã ký kết Biên bản ghi nhớ hợp tác chiến lược nhằm nâng cao trải nghiệm khách hàng tại các khu vui chơi giải trí. Vietravel sẽ phân phối vé vào tổ hợp du lịch Sun World và xây dựng các tour du lịch kết hợp với vé tham quan. Thỏa thuận này cũng bao gồm nhiều chương trình ưu đãi cho khách hàng, với mục tiêu đạt ít nhất 120.000 lượt khách trong năm 2025, đồng thời nâng cao nhận diện thương hiệu của cả hai bên.",
     "link": "https://tuoitre.vn/sun-world-va-vietravel-hop-tac-chien-luoc-20250312071953725.htm",
@@ -1364,6 +1391,37 @@
       },
       {
         "text": "Chỉ tổ chức tour du lịch trong nước.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Eco Retreat: Nơi trị liệu, phục hồi, tái tạo cho mọi thế hệ",
+    "content": "Eco Retreat là một khu đô thị rộng 220ha tại TP.HCM, được thiết kế để phục hồi, trị liệu cho tất cả các thế hệ từ trẻ nhỏ đến người cao tuổi. Nơi đây có nhiều không gian thiên nhiên với các khu vườn chủ đề, giúp cư dân phát triển toàn diện về cả thể chất và tâm lý. Eco Retreat không chỉ tạo ra một môi trường sống lành mạnh mà còn khuyến khích cư dân kết nối xã hội và khám phá bản thân thông qua các hoạt động ngoài trời.",
+    "link": "https://tuoitre.vn/eco-retreat-noi-tri-lieu-phuc-hoi-tai-tao-cho-moi-the-he-20250311200723989.htm",
+    "cat": "du-lich",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Eco Retreat có những lợi ích gì cho cư dân?",
+    "answers": [
+      {
+        "text": "Cung cấp không gian trị liệu và phục hồi cho mọi thế hệ",
+        "correct": true
+      },
+      {
+        "text": "Chỉ dành cho người lớn tuổi",
+        "correct": false
+      },
+      {
+        "text": "Chỉ dành cho trẻ em",
+        "correct": false
+      },
+      {
+        "text": "Không có hoạt động ngoài trời",
+        "correct": false
+      },
+      {
+        "text": "Cung cấp dịch vụ mua sắm cao cấp",
         "correct": false
       }
     ]
@@ -1400,32 +1458,32 @@
     ]
   },
   {
-    "title": "Eco Retreat: Nơi trị liệu, phục hồi, tái tạo cho mọi thế hệ",
-    "content": "Eco Retreat là một khu đô thị rộng 220ha tại TP.HCM, được thiết kế để phục hồi, trị liệu cho tất cả các thế hệ từ trẻ nhỏ đến người cao tuổi. Nơi đây có nhiều không gian thiên nhiên với các khu vườn chủ đề, giúp cư dân phát triển toàn diện về cả thể chất và tâm lý. Eco Retreat không chỉ tạo ra một môi trường sống lành mạnh mà còn khuyến khích cư dân kết nối xã hội và khám phá bản thân thông qua các hoạt động ngoài trời.",
-    "link": "https://tuoitre.vn/eco-retreat-noi-tri-lieu-phuc-hoi-tai-tao-cho-moi-the-he-20250311200723989.htm",
-    "cat": "du-lich",
-    "positivity": 9,
+    "title": "Sụt 14 kg trong 6 tháng do bệnh lupus ban đỏ",
+    "content": "Bà Hòa, 66 tuổi, đã sụt 14 kg trong 6 tháng do mắc bệnh lupus ban đỏ, một bệnh tự miễn mạn tính. Sau khi nhập viện trong tình trạng suy kiệt và nhiễm trùng nặng, các bác sĩ đã xác định được nguyên nhân và tiến hành điều trị tích cực. Bệnh lupus ban đỏ thường biểu hiện với các triệu chứng như đau nhức, rụng tóc và dễ nhầm lẫn với các bệnh khác. Nếu không được điều trị kịp thời, bệnh có thể dẫn đến những biến chứng nghiêm trọng.",
+    "link": "https://vnexpress.net/sut-14-kg-trong-6-thang-do-benh-lupus-ban-do-4860083.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
     "importance": 8,
-    "question": "Eco Retreat có những lợi ích gì cho cư dân?",
+    "question": "Bà Hòa đã sụt bao nhiêu kg trong 6 tháng do bệnh lupus ban đỏ?",
     "answers": [
       {
-        "text": "Cung cấp không gian trị liệu và phục hồi cho mọi thế hệ",
+        "text": "14 kg",
         "correct": true
       },
       {
-        "text": "Chỉ dành cho người lớn tuổi",
+        "text": "10 kg",
         "correct": false
       },
       {
-        "text": "Chỉ dành cho trẻ em",
+        "text": "20 kg",
         "correct": false
       },
       {
-        "text": "Không có hoạt động ngoài trời",
+        "text": "5 kg",
         "correct": false
       },
       {
-        "text": "Cung cấp dịch vụ mua sắm cao cấp",
+        "text": "8 kg",
         "correct": false
       }
     ]
